<resources>
    <string name="default_notification_channel_id" translatable="false">default</string>
    <string name="updates_notification_channel_id" translatable="false">updates</string>
    <string name="promo_notification_channel_id" translatable="false">promo</string>
    <string name="default_notification_channel_name">General</string>
    <string name="updates_notification_channel_name">Feature Updates</string>
    <string name="promo_notification_channel_name">Promotion</string>
    <string name="visit_facebook">Visit Facebook</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Select Path</string>
    <string name="username_default">default</string>
    <string name="path_image_contentdescription">Clipart with chat word</string>
    <string name="prevpath_image_contentdescription">previous</string>
    <string name="nextpath_image_contentdescription">next</string>
    <string name="oops_button_text">I made a mistake</string>
    <string name="configure">Configure</string>
    <string name="leave_configure">leave configuration mode</string>
    <string name="oops_help">Restart the path or go to the parent path</string>
    <string name="licenses">Licenses</string>
    <string name="editPathTitleHint">new path description</string>
    <string name="switch_users">Switch Users</string>
    <string name="new_path_text">new path</string>
    <string name="create_path_message">What do you want to name this path?</string>
    <string name="create">Create</string>
    <string name="default_text">Default</string>
    <string name="edit_image_dialog_title">Change image</string>
    <string name="edit_image_dialog_message">Do you want this image to be shared with other path profiles?</string>
    <string name="modify">Modify</string>
    <string name="add_path">add path</string>
    <string name="add_child_path">add child path</string>
    <string name="reset">reset</string>
    <string name="path_order">path order</string>
    <string name="statistics">statistics</string>
    <string name="delete">Delete</string>
    <string name="add_user">Add user</string>
    <string name="name_of_user">name of user</string>
    <string name="user_already_exists">user already exists</string>
    <string name="user_empty_not_allowed">empty username is not allowed</string>
    <string name="no_email">no e-mail available</string>
    <string name="mailto" translatable="false">mailto:%s</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="email_us">E-mail Us</string>
    <string name="fixed_color_preference_title">Fixed Text Color</string>
    <string name="fixed_path_text_summary_on_text">Paths use a fixed text color</string>
    <string name="fixed_path_text_summary_off_text">Paths derive their text color from the image</string>
    <string name="path">Path</string>
    <string name="user_details_fragment_title">User Details</string>
    <string name="user_fragment_title">Users</string>
    <string name="edit_user_dialog_title">Edit user</string>
    <string name="edit_user_dialog_message">Enter a name</string>
    <string name="add_path_collection_dialog_title">Add Path Collection</string>
    <string name="add_path_collection_dialog_name" translatable="false">@string/edit_user_dialog_message</string>
    <string name="error_empty_string_not_allowed">empty string is not allowed</string>
    <string name="save">save</string>
    <string name="path_collection_details_fragment_title">Path Collection Detail</string>
    <string name="delete_image_dialog_title">Remove Image?</string>
    <string name="delete_image_dialog_message">Do you want to remove this image?</string>
    <string name="help">Help</string>
    <string name="path_of_the_week">Path of the Week</string>
    <string name="organize_collections">Organize Automatically</string>
    <string name="edit_collection_dialog_title">Edit collection name</string>
    <string name="edit_collection_dialog_message">Give this collection a name</string>
    <string name="delete_path_dialog_title">Delete path?</string>
    <string name="delete_path_dialog_message">Are you sure you want to delete this path?</string>
    <string name="paths_fragment_name">Edit Collection</string>
    <string name="paths_detail_fragment_name">Path Info</string>
    <string name="anchor_path_title">Anchor Path</string>
    <string name="anchor_path_tooltip">Anchors this path at the front and prevents it from being sorted</string>
    <string name="delete_collection_title">Delete collection?</string>
    <string name="delete_collection_message">Are you sure you want to delete this collection? This action cannot be undone.</string>
    <string name="delete_user_dialog_title">Delete user?</string>
    <string name="delete_user_dialog_message">Are you sure you want to delete this user?</string>
    <string name="reuse_image">reuse image</string>
    <string name="imageSelectFragmentTitle">Select Image</string>
    <string name="configure_image_message">Tap to configure image</string>
    <string name="onboard_add_subpath_primary">Add sub-path</string>
    <string name="onboard_add_subpath_secondary">Tap the + sign to add a child path the user navigates to when they tap this path</string>
    <string name="onboard_add_path_primary">Add path</string>
    <string name="onboard_add_path_secondary">Tap the + sign to add a path</string>
    <string name="reset_help">Reset Help</string>
    <string name="onboard_add_collection_primary">Add Collection</string>
    <string name="onboard_add_collection_secondary">Create a new collection of paths</string>
    <string name="onboard_user_add_primary">Add User</string>
    <string name="onboard_user_add_secondary">Manage separate profiles so you can quickly swap to meet specific needs</string>
    <string name="auto_sort">auto-sort</string>
    <string name="new_collection_edittext_description">new collection description</string>
    <string name="add_template">Add Template</string>
    <string name="copy_to_user">Copy to User</string>
    <string name="select_a_user">Select a user</string>
    <string name="goto_child">navigate into</string>
    <string name="choose_a_template">Choose a Template</string>
    <string name="onboard_goto_subpath_primary">Goto Subpath</string>
    <string name="onboard_goto_subpath_secondary">Use this shortcut to dive deeper into subpaths</string>
    <string name="onboard_path_copy_to_user_primary">Copy to User</string>
    <string name="onboard_path_copy_to_user_secondary">Copy the current collection to another user to save time</string>
    <string name="onboard_add_collection_template_primary">Add Template</string>
    <string name="onboard_add_collection_template_secondary">Insert a predefined set of paths for your user</string>
    <string name="add_from_template_dialog_title">Add from template?</string>
    <string name="add_from_template_dialog_message">Would you like to add a curated collection?</string>
    <string name="copy_to_user_dialog_message">Do you want to copy this path to another user?</string>
    <string name="copy_to_user_dialog_title">Copy to user?</string>
    <string name="switch_users_after_copy_path_dialog_title">Success! Switch users?</string>
    <string name="switch_users_after_copy_path_dialog_message">Do you want to switch to this user now that the path is copied?</string>
    <string name="keep_awake_preference_title">Keep Awake</string>
    <string name="keep_awake_preference_summary_on">Keep the screen awake while in use</string>
    <string name="keep_awake_preference_summary_off">Use the system default for keeping the screen awake</string>
    <string name="general_preference_title">General</string>
    <string name="read_out_loud_preference_summary_off">Don&#8217;t read out loud while navigating paths</string>
    <string name="read_out_loud_preference_summary_on">Read out loud while navigating paths</string>
    <string name="read_out_loud_preference_title">Read Out Loud</string>
    <string name="onboard_path_read_out_loud_primary">Read Out Loud</string>
    <string name="onboard_path_read_out_loud_secondary">Read paths out loud as they&#8217;re navigated to combine the paths into a sentence</string>
    <string name="facebook_message">Facebook Message</string>
    <string name="search">Search</string>
    <string name="record_audio">Record Voice</string>
    <string name="record_audio_button_description">Record Voice</string>
    <string name="play_recording_button_description">Play Recording</string>
    <string name="record_audio_description">This feature lets you record in your own voice what to say when the path is selected instead of using text to speech.</string>
    <string name="pro">pro</string>
    <string name="tts_unavailable">TTS is unavailable</string>
    <string name="visit_github" translatable="false">Github</string>
    <string name="col_title_smartchat">Let&#8217;s Chat</string>
    <string name="col_title_madchat">Mad Mode</string>
    <string name="col_title_emptychat">My Chat</string>
    <string name="col_title_foodfinder">Food Finder</string>
    <string name="col_title_essentials">Essentials</string>
    <string name="col_title_breakfast">Breakfast</string>
    <string name="col_title_lunch">Lunch</string>
    <string name="col_title_dinner">Dinner</string>
    <string name="col_title_dessert">Dessert</string>
    <string name="col_title_places_home">Places at Home</string>
    <string name="col_title_places_school">Places at School</string>
    <string name="col_title_family">Family</string>
    <string name="col_title_fruits">Fruits</string>
    <string name="col_title_vegetables">Vegetables</string>
    <string name="path_empty_string">empty</string>
    <string name="path_chat_words">request</string>
    <string name="path_i_want">I want</string>
    <string name="path_something_is_wrong">something&#8217;s wrong</string>
    <string name="path_something_to_eat_drink">to eat or drink</string>
    <string name="path_break_rest">a break or rest</string>
    <string name="path_hug">a hug</string>
    <string name="path_play_with_toys">to play with toys</string>
    <string name="path_read_a_book">to read a book</string>
    <string name="path_listen_to_music">to listen to music</string>
    <string name="path_use_the_bathroom">to use the bathroom</string>
    <string name="path_use_tablet">to use the tablet</string>
    <string name="path_watch_video">to watch a video (TV)</string>
    <string name="path_eat">to eat</string>
    <string name="path_drink">to drink</string>
    <string name="path_tablet">to use the tablet</string>
    <string name="path_mad">angry / mad</string>
    <string name="path_sick">I feel sick</string>
    <string name="path_more">more</string>
    <string name="path_tired">tired</string>
    <string name="path_something_hurts">something hurts</string>
    <string name="path_help">help</string>
    <string name="path_all_done">all done</string>
    <string name="path_ear">ear</string>
    <string name="path_foot">foot</string>
    <string name="path_head">head</string>
    <string name="path_hearing_aid">hearing aid</string>
    <string name="path_music">music</string>
    <string name="path_nose">nose</string>
    <string name="path_mouth_teeth_tongue">mouth, teeth, tongue</string>
    <string name="path_mouth">mouth</string>
    <string name="path_tooth">tooth</string>
    <string name="path_tongue">tongue</string>
    <string name="path_leg_foot_knees_toes">leg,foot,knees,toes</string>
    <string name="path_leg">leg</string>
    <string name="path_milk_bottle">bottle of milk</string>
    <string name="path_bathroom">the bathroom</string>
    <string name="path_bathroom_school">bathroom (school)</string>
    <string name="path_pasta">pasta</string>
    <string name="path_sandwich">sandwich</string>
    <string name="path_pancakes">pancakes</string>
</resources>