<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.manager.collectiondetail.CollectionDetailFragment">

    <include
        android:id="@+id/overlay"
        layout="@layout/smartchat_overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/displayImage"
        app:layout_constraintEnd_toEndOf="@+id/displayImage"
        app:layout_constraintStart_toStartOf="@+id/displayImage"
        app:layout_constraintTop_toTopOf="@+id/displayImage"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFab"
        style="@style/MyFabStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/add_child_path"
        android:tooltipText="@string/add_child_path"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <Button
        android:id="@+id/deleteButton"
        style="@style/NegativeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addFab" />

    <ImageView
        android:id="@+id/displayImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"
        tools:ignore="ContentDescription"
        android:labelFor="@+id/editName"/>

    <EditText
        android:id="@+id/editName"
        style="@style/MyEditTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/displayImage"
        app:layout_constraintStart_toStartOf="@+id/displayImage"
        app:layout_constraintTop_toBottomOf="@+id/displayImage"
        tools:text="Let's Chat" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/anchorPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/anchor_path_title"
        android:tooltipText="@string/anchor_path_tooltip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <Button
        android:id="@+id/recordAudioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/record_audio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anchorPath" />

</androidx.constraintlayout.widget.ConstraintLayout>